no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: a8d3a98895d8d591f368d1bf0b9bd9c33482d48a

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-cs/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-cs/strings.xml
@@ -4775,6 +4775,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Dopln
 k
@@ -4801,6 +4815,81 @@ nebo
 zabezpe
 en
 m
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+Dopln
+k
+%
+1
+s
+poru
+uje
+pravidla
+Mozilly
+a
+proto
+nem
+e
+b
+t
+nainstalov
+n
+do
+aplikace
+%
+2
+s
 .
 <
 /
@@ -4931,6 +5020,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4943,6 +5046,82 @@ a
 nelze
 ho
 nainstalovat
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+Dopln
+k
+%
+1
+s
+poru
+uje
+pravidla
+Mozilly
+a
+proto
+nem
+e
+b
+t
+nainstalov
+n
+do
+aplikace
+%
+2
+s
 .
 <
 /
@@ -6099,6 +6278,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Dopln
 k
@@ -6148,6 +6341,77 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Toto
+roz
+en
+bylo
+zablokov
+no
+z
+d
+vodu
+poru
+ov
+n
+pravidel
+Mozilly
+a
+bylo
+zak
+z
+no
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -6161,6 +6425,20 @@ name
 =
 "
 mozac_feature_addons_status_softblocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Toto
@@ -6184,6 +6462,75 @@ povolit
 na
 vlastn
 riziko
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Toto
+roz
+en
+poru
+uje
+pravidla
+Mozilly
+a
+bylo
+proto
+zak
+z
+no
+.
+M
+ete
+jej
+povolit
+ale
+m
+e
+to
+b
+t
+riskantn
 .
 <
 /
