--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-fy-rNL/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-fy-rNL/strings.xml
@@ -4560,6 +4560,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4579,6 +4593,76 @@ stabiliteits
 of
 feilichheidsproblemen
 jout
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+skeint
+it
+belied
+fan
+Mozilla
+en
+kin
+net
+yn
+%
+2
+s
+ynstallearre
+wurde
 .
 <
 /
@@ -4705,6 +4789,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4717,6 +4815,77 @@ Mozilla
 en
 kin
 net
+ynstallearre
+wurde
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+skeint
+it
+belied
+fan
+Mozilla
+en
+kin
+net
+yn
+%
+2
+s
 ynstallearre
 wurde
 .
@@ -5829,6 +5998,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5840,6 +6023,72 @@ feilichheids
 -
 of
 stabiliteitsproblemen
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Dizze
+twreiding
+is
+blokkearre
+fanwegen
+skeining
+fan
+it
+belied
+fan
+Mozilla
+en
+is
+tskeakele
 .
 <
 /
@@ -5883,10 +6132,93 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Dizze
 twreiding
 skeint
+it
+belied
+fan
+Mozilla
+en
+is
+tskeakele
+.
+Jo
+kinne
+it
+ynskeakelje
+mar
+dit
+kin
+gefaarlik
+w
+ze
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Dizze
+twreiding
+is
+beheind
+fanwegen
+skeinen
+fan
 it
 belied
 fan
