--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-pa-rIN/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-pa-rIN/strings.xml
@@ -5507,6 +5507,58 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Mozilla
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -5534,6 +5586,50 @@ ignore
 =
 "
 UnusedResources
+"
+>
+Mozilla
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
 "
 >
 Mozilla
