--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-sk/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-sk/strings.xml
@@ -4733,6 +4733,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Doplnok
 %
@@ -4762,6 +4776,78 @@ nos
 ou
 prehliada
 a
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+Doplnok
+%
+1
+s
+poru
+uje
+pravidl
+Mozilly
+a
+ned
+sa
+do
+aplik
+cie
+%
+2
+s
+nain
+talova
 .
 <
 /
@@ -4890,6 +4976,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4901,6 +5001,79 @@ Mozilly
 a
 ned
 sa
+nain
+talova
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+Doplnok
+%
+1
+s
+poru
+uje
+pravidl
+Mozilly
+a
+ned
+sa
+do
+aplik
+cie
+%
+2
+s
 nain
 talova
 .
@@ -6051,6 +6224,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Doplnok
 %
@@ -6097,6 +6284,75 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Toto
+roz
+renie
+je
+zablokovan
+z
+d
+vodu
+poru
+enia
+pravidiel
+Mozilly
+a
+bolo
+preto
+zak
+zan
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -6111,6 +6367,20 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Toto
 roz
@@ -6121,6 +6391,78 @@ pravidl
 Mozilly
 a
 bolo
+zak
+zan
+.
+M
+ete
+ho
+povoli
+ale
+m
+e
+to
+by
+riskantn
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Toto
+roz
+renie
+je
+obmedzen
+z
+d
+vodu
+poru
+ovania
+pravidiel
+Mozilly
+a
+bolo
+preto
 zak
 zan
 .
