--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-th/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-th/strings.xml
@@ -3802,13 +3802,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -3859,6 +3875,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -3869,6 +3901,36 @@ name
 =
 "
 mozac_feature_addons_extension_failed_to_install
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
 "
 >
 <
@@ -4090,6 +4152,20 @@ name
 =
 "
 mozac_feature_addons_blocklisted_1
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 %
@@ -5118,6 +5194,39 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5159,6 +5268,20 @@ name
 =
 "
 mozac_feature_addons_status_blocklisted
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 %
