--- a/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-hu/strings.xml
+++ b/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-hu/strings.xml
@@ -110,6 +110,65 @@ string
 !
 -
 -
+Message
+announced
+to
+the
+user
+when
+tab
+tray
+is
+selected
+The
+%
+1
+s
+will
+be
+replaced
+by
+the
+number
+of
+opened
+tabs
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_tab_counter_open_tab_tray
+"
+>
+Nyitott
+lapok
+:
+%
+1
+s
+.
+Koppintson
+a
+lapok
+k
+z
+tti
+v
+lt
+shoz
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 button
