--- a/mobile/android/fenix/app/src/main/res/values-am/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-am/strings.xml
@@ -5804,13 +5804,6 @@ name
 "
 search_engine_icon_content_description
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 %
 s
@@ -42422,6 +42415,81 @@ string
 !
 -
 -
+Option
+for
+likert
+scale
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+likert_scale_option_7
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Firefox
+<
+/
+string
+>
+<
+!
+-
+-
+Option
+for
+likert
+scale
+-
+-
+>
+<
+string
+name
+=
+"
+likert_scale_option_8
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 shown
 in
@@ -42464,6 +42532,102 @@ name
 =
 "
 microsurvey_prompt_printing_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Firefox
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+prompt
+for
+search
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_prompt_search_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Firefox
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+prompt
+for
+sync
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_prompt_sync_title
 "
 tools
 :
@@ -42565,6 +42729,110 @@ name
 =
 "
 microsurvey_homepage_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Firefox
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+the
+survey
+title
+for
+search
+experience
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_search_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Firefox
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+the
+survey
+title
+for
+sync
+experience
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_sync_title
 "
 tools
 :
@@ -42966,6 +43234,43 @@ string
 !
 -
 -
+Glean
+debug
+tools
+-
+-
+>
+<
+!
+-
+-
+The
+title
+of
+the
+glean
+debugging
+feature
+-
+-
+>
+<
+string
+name
+=
+"
+glean_debug_tools_title
+"
+>
+Glean
+<
+/
+string
+>
+<
+!
+-
+-
 Messages
 explaining
 how
@@ -43064,6 +43369,61 @@ ignore
 =
 "
 UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
 "
 >
 <
