--- a/mobile/android/fenix/app/src/main/res/values-de/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-de/strings.xml
@@ -3355,6 +3355,48 @@ string
 Browser
 menu
 banner
+header
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_header
+"
+>
+Sie
+haben
+Erweiterungen
+installiert
+aber
+nicht
+aktiviert
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 body
 text
 for
@@ -3415,6 +3457,82 @@ Privatsph
 re
 und
 Sicherheit
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+Um
+Erweiterungen
+zu
+verwenden
+aktivieren
+Sie
+diese
+in
+den
+Einstellungen
+oder
+indem
+Sie
+unten
+%
+s
+ausw
+hlen
 .
 <
 /
@@ -6903,13 +7021,6 @@ name
 =
 "
 search_engine_icon_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 %
