--- a/mobile/android/fenix/app/src/main/res/values-gd/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-gd/strings.xml
@@ -7289,13 +7289,6 @@ name
 "
 search_engine_icon_content_description
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 An
 t
@@ -12432,7 +12425,7 @@ preferences_override_account_server
 "
 >
 Frithealaiche
-cunntas
+chunntasan
 Mozilla
 gn
 thaichte
@@ -31752,6 +31745,37 @@ an
 uidheam
 agad
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+syncing
+saved
+passwords
+in
+Fenix
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_passwords_sync_logins_2
+"
+>
+Sioncronaich
+na
+faclan
+-
+faire
 <
 /
 string
