--- a/mobile/android/fenix/app/src/main/res/values-hu/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-hu/strings.xml
@@ -3548,6 +3548,55 @@ string
 Browser
 menu
 banner
+header
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_header
+"
+>
+Vannak
+olyan
+kieg
+sz
+t
+i
+amelyek
+telep
+tve
+vannak
+de
+nincsenek
+enged
+lyezve
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 body
 text
 for
@@ -3626,6 +3675,89 @@ s
 t
 s
 ig
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+A
+kieg
+sz
+t
+k
+haszn
+lat
+hoz
+enged
+lyezze
+ket
+a
+be
+ll
+t
+sokban
+vagy
+lent
+a
+%
+s
+kiv
+laszt
+s
+val
 .
 <
 /
@@ -5460,6 +5592,230 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+main
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_main_menu_handlebar_content_description
+"
+>
+F
+men
+lap
+bez
+r
+sa
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+extensions
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_extensions_menu_handlebar_content_description
+"
+>
+Kieg
+sz
+t
+k
+men
+lap
+bez
+r
+sa
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+save
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_save_menu_handlebar_content_description
+"
+>
+Ment
+s
+men
+lap
+bez
+r
+sa
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+tools
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_tools_menu_handlebar_content_description
+"
+>
+Eszk
+z
+k
+men
+lap
+bez
+r
+sa
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+custom
+tab
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_custom_tab_menu_handlebar_content_description
+"
+>
+Egy
+ni
+lap
+men
+lap
+bez
+r
+sa
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 description
@@ -6616,6 +6972,46 @@ in
 the
 search
 view
+that
+lets
+a
+user
+search
+by
+scanning
+a
+QR
+code
+-
+-
+>
+<
+string
+name
+=
+"
+search_scan_button_2
+"
+>
+QR
+-
+k
+d
+leolvas
+sa
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+in
+the
+search
+view
 when
 shortcuts
 are
@@ -7055,13 +7451,6 @@ name
 =
 "
 search_engine_icon_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 %
@@ -8748,6 +9137,816 @@ string
 !
 -
 -
+Onboarding
+header
+for
+the
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Nimbus
+experiments
+do
+not
+support
+string
+placeholders
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_header
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Szabja
+szem
+lyre
+a
+Firefoxot
+kieg
+sz
+t
+kkel
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+sub
+header
+for
+the
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_sub_header
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Adjon
+hozz
+olyan
+harmadik
+felekt
+l
+sz
+rmaz
+kieg
+sz
+t
+ket
+melyek
+n
+velik
+a
+biztons
+g
+t
+a
+hat
+konys
+g
+t
+vagy
+m
+sk
+nt
+hasznosak
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+for
+checking
+more
+add
+-
+ons
+on
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_explore_more_extensions
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+>
+Fedezzen
+fel
+t
+bb
+kieg
+sz
+t
+t
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+button
+for
+start
+browsing
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_start_browsing_button
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+>
+Kezdje
+el
+a
+b
+ng
+sz
+st
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+for
+checking
+more
+add
+-
+ons
+on
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_explore_more_extensions_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Fedezzen
+fel
+t
+bb
+kieg
+sz
+t
+t
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+button
+for
+start
+browsing
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_start_browsing_button_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+B
+ng
+sz
+s
+megkezd
+se
+<
+/
+string
+>
+<
+!
+-
+-
+Ublock
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Ublock
+Origin
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_ublock_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+uBlock
+Origin
+<
+/
+string
+>
+<
+!
+-
+-
+Ublock
+description
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_ublock_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Hat
+sosan
+s
+hat
+konyan
+blokkolja
+a
+hirdet
+seket
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Privacy
+Badger
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Privacy
+Badger
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_privacy_badger_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Privacy
+Badger
+<
+/
+string
+>
+<
+!
+-
+-
+Privacy
+Badger
+description
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_privacy_badger_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+K
+vet
+s
+elleni
+gy
+ngyszem
+.
+Meg
+ll
+tja
+a
+l
+thatatlan
+k
+vet
+ket
+s
+a
+k
+mked
+hirdet
+seket
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Search
+by
+Image
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Search
+by
+Image
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_search_by_image_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+K
+p
+szerinti
+keres
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Search
+by
+Image
+description
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_search_by_image_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Ha
+tal
+l
+egy
+rdekes
+k
+pet
+tudjon
+meg
+r
+la
+t
+bbet
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Dark
+Reader
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Dark
+Reader
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_dark_reader_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Dark
+Reader
+<
+/
+string
+>
+<
+!
+-
+-
+Privacy
+Badger
+description
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_dark_reader_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Egy
+ni
+s
+t
+t
+m
+d
+a
+mobilwebhez
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Search
 Widget
 -
@@ -9598,6 +10797,34 @@ UnusedResources
 Webhely
 enged
 lyek
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+advanced
+site
+settings
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_site_settings
+"
+>
+Oldalbe
+ll
+t
+sok
 <
 /
 string
@@ -20996,6 +22223,31 @@ string
 -
 -
 Bookmark
+menu
+move
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_menu_move_button
+"
+>
+thelyez
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Bookmark
 overflow
 menu
 edit
@@ -21819,6 +23071,101 @@ string
 !
 -
 -
+Bookmark
+snackbar
+message
+for
+deleting
+a
+single
+item
+.
+Parameter
+is
+the
+title
+of
+the
+item
+being
+deleted
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_single_item
+"
+>
+A
+(
+z
+)
+%
+s
+t
+r
+lve
+<
+/
+string
+>
+<
+!
+-
+-
+Bookmark
+snackbar
+message
+for
+deleting
+multiple
+items
+.
+Parameter
+is
+the
+number
+of
+items
+being
+deleted
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_multiple_items
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Elemek
+t
+r
+lve
+:
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 for
 the
@@ -22233,6 +23580,46 @@ a
 kedvenc
 oldalait
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+add
+new
+folder
+button
+when
+selecting
+a
+folder
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_select_folder_new_folder_button_title
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+j
+mappa
 <
 /
 string
@@ -23590,6 +24977,124 @@ studies_off
 "
 >
 Ki
+<
+/
+string
+>
+<
+!
+-
+-
+Category
+header
+of
+a
+preference
+that
+allows
+a
+user
+to
+alter
+settings
+related
+to
+web
+permissions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_category_permissions
+"
+>
+Enged
+lyek
+<
+/
+string
+>
+<
+!
+-
+-
+Category
+header
+of
+a
+preference
+that
+allows
+a
+user
+to
+alter
+settings
+related
+to
+web
+content
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_category_content
+"
+>
+Tartalom
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+altering
+the
+default
+browsing
+mode
+.
+When
+enabled
+the
+desktop
+site
+will
+always
+be
+requested
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preference_feature_desktop_mode_default
+"
+>
+Asztali
+oldal
+k
+r
+se
+mindig
 <
 /
 string
@@ -26316,6 +27821,71 @@ nyvjelz
 k
 mentve
 !
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+snackbar
+when
+user
+bookmarks
+a
+list
+of
+tabs
+.
+Parameter
+will
+be
+replaced
+by
+the
+name
+of
+the
+folder
+the
+bookmark
+was
+saved
+into
+.
+-
+-
+>
+<
+string
+name
+=
+"
+snackbar_message_bookmarks_saved_in
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+A
+k
+nyvjelz
+k
+ide
+lettek
+mentve
+:
+%
+s
+.
 <
 /
 string
