--- a/mobile/android/fenix/app/src/main/res/values-is/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-is/strings.xml
@@ -3377,6 +3377,48 @@ string
 Browser
 menu
 banner
+header
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_header
+"
+>
+ert
+me
+uppsetta
+forritsauka
+en
+ekki
+virka
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 body
 text
 for
@@ -3442,6 +3484,84 @@ fri
 helgi
 og
 ryggi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+Til
+a
+nota
+forritsauka
+skaltu
+virkja
+stillingunum
+e
+a
+me
+v
+a
+velja
+%
+s
+h
+r
+a
+ne
+an
 .
 <
 /
@@ -6971,13 +7091,6 @@ name
 =
 "
 search_engine_icon_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 %
