--- a/mobile/android/fenix/app/src/main/res/values-kab/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-kab/strings.xml
@@ -1916,74 +1916,6 @@ string
 name
 =
 "
-navbar_cfr_message
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Afeggag
--
-a
-yettnef
-as
-mi
-ara
-tedrurme
-d
-akessar
-i
-wakken
-ad
-d
--
-treb
-e
-tallunt
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-message
-displayed
-in
-the
-contextual
-feature
-recommendation
-popup
-promoting
-the
-navigation
-bar
-.
--
--
->
-<
-string
-name
-=
-"
 navbar_cfr_message_2
 "
 >
@@ -3463,6 +3395,51 @@ string
 Browser
 menu
 banner
+header
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_header
+"
+>
+ur
+-
+k
+isi
+zaf
+yettwasbedden
+maca
+ur
+ttwaremden
+ara
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 body
 text
 for
@@ -3685,63 +3662,6 @@ Rnu
 %
 1
 s
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-(
-not
-visible
-for
-screen
-readers
-etc
-.
-)
-:
-Label
-for
-plus
-icon
-used
-to
-add
-extensions
-.
--
--
->
-<
-string
-name
-=
-"
-browser_menu_extension_plus_icon_content_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Rnu
-asi
-zef
 <
 /
 string
@@ -5365,6 +5285,223 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+main
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_main_menu_handlebar_content_description
+"
+>
+Mdel
+tiferkit
+n
+wumu
+agejdan
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+extensions
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_extensions_menu_handlebar_content_description
+"
+>
+Mdel
+tiferkit
+n
+wumu
+n
+yisi
+zaf
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+save
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_save_menu_handlebar_content_description
+"
+>
+Mdel
+tiferkit
+n
+wumu
+n
+usekles
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+tools
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_tools_menu_handlebar_content_description
+"
+>
+Mdel
+tiferkit
+n
+wumu
+n
+yifecka
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+custom
+tab
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_custom_tab_menu_handlebar_content_description
+"
+>
+Mdel
+tiferkit
+n
+wumu
+n
+waccaren
+udmawanen
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 description
@@ -6444,8 +6581,59 @@ name
 "
 search_scan_button
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Snirem
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+in
+the
+search
+view
+that
+lets
+a
+user
+search
+by
+scanning
+a
+QR
+code
+-
+-
+>
+<
+string
+name
+=
+"
+search_scan_button_2
+"
+>
+umm
+tangalt
+QR
 <
 /
 string
@@ -6880,13 +7068,6 @@ name
 =
 "
 search_engine_icon_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Amsedday
@@ -7364,266 +7545,6 @@ string
 !
 -
 -
-Notification
-pre
--
-permission
-dialog
--
--
->
-<
-!
--
--
-Enable
-notification
-pre
-permission
-dialog
-title
-The
-first
-parameter
-is
-the
-name
-of
-the
-app
-defined
-in
-app_name
-(
-for
-example
-:
-Fenix
-)
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_title
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Il
-a
-tt
-awanen
-ad
-tge
-ugar
-akked
-%
-s
-<
-/
-string
->
-<
-!
--
--
-Enable
-notification
-pre
-permission
-dialog
-description
-with
-rationale
-The
-first
-parameter
-is
-the
-name
-of
-the
-app
-defined
-in
-app_name
-(
-for
-example
-:
-Fenix
-)
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Mtawi
-iccaren
--
-ik
-im
-gar
-yibenkan
-sefrek
-isadaren
-awi
-iwellihen
-akken
-ad
-tfarse
-deg
-ummesten
-n
-tba
-nit
-n
-%
-s
-d
-wugar
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-request
-notification
-permission
-on
-the
-device
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_positive_button
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Kemmel
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-not
-request
-notification
-permission
-on
-the
-device
-and
-dismiss
-the
-dialog
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_negative_button
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Ma
-i
-tura
-<
-/
-string
->
-<
-!
--
--
 Juno
 first
 user
@@ -8022,154 +7943,6 @@ string
 !
 -
 -
-Description
-for
-set
-firefox
-as
-default
-browser
-screen
-used
-by
-Nimbus
-experiments
-.
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_default_browser_description_nimbus_2
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Iminig
--
-nne
-tettallit
-yiwet
-n
-tkebbanit
-ur
-nettnadi
-ef
-tedrimt
-tessew
-al
-tikebbaniyin
-ara
-ak
--
-i
-efren
-deg
-web
-.
-\
-n
-\
-nIssin
-ugar
-ef
-tsertit
--
-nne
-n
-tba
-nit
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-link
-to
-the
-privacy
-notice
-webpage
-for
-set
-as
-firefox
-default
-browser
-screen
-.
-This
-is
-part
-of
-the
-string
-with
-the
-key
-"
-juno_onboarding_default_browser_description
-"
-.
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_default_browser_description_link_text
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-tasertit
-n
-tba
-nit
-<
-/
-string
->
-<
-!
--
--
 Text
 for
 the
@@ -8292,93 +8065,6 @@ seg
 yibenk
 er
 waye
-<
-/
-string
->
-<
-!
--
--
-Description
-for
-sign
-in
-to
-sync
-screen
-.
-Nimbus
-experiments
-do
-not
-support
-string
-placeholders
-.
-Note
-:
-The
-word
-"
-Firefox
-"
-should
-NOT
-be
-translated
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_sign_in_description_2
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-BrandUsage
-UnusedResources
-"
->
-Mi
-ara
-teqqne
-rnu
-ad
-tremde
-amtawi
-ta
-ellist
-tettwase
-hed
-.
-Firefox
-yettwgelhin
-awalen
--
-ik
-uffiren
-ticra
-n
-yisebtar
-akked
-wayen
-ni
-en
-.
 <
 /
 string
@@ -9011,6 +8697,440 @@ UnusedResources
 Ma
 i
 tura
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+for
+checking
+more
+add
+-
+ons
+on
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_explore_more_extensions
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+>
+Snirem
+ugar
+n
+yisi
+zaf
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+button
+for
+start
+browsing
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_start_browsing_button
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+>
+Bdu
+tunigin
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+for
+checking
+more
+add
+-
+ons
+on
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_explore_more_extensions_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Snirem
+ugar
+n
+yisi
+zaf
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+button
+for
+start
+browsing
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_start_browsing_button_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Bdu
+tunigin
+<
+/
+string
+>
+<
+!
+-
+-
+Ublock
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Ublock
+Origin
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_ublock_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+uBlock
+Origin
+<
+/
+string
+>
+<
+!
+-
+-
+Privacy
+Badger
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Privacy
+Badger
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_privacy_badger_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Privacy
+Badger
+<
+/
+string
+>
+<
+!
+-
+-
+Search
+by
+Image
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Search
+by
+Image
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_search_by_image_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Nadi
+s
+tugna
+<
+/
+string
+>
+<
+!
+-
+-
+Dark
+Reader
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Dark
+Reader
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_dark_reader_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Dark
+Reader
 <
 /
 string
@@ -9826,8 +9946,51 @@ name
 "
 preferences_site_permissions
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Tisirag
+n
+usmel
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+advanced
+site
+settings
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_site_settings
+"
+>
+I
+ewwa
+en
 n
 usmel
 <
@@ -19526,51 +19689,6 @@ the
 menu
 button
 to
-rename
-a
-top
-site
--
--
->
-<
-string
-name
-=
-"
-rename_top_site
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Senfel
-isem
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-menu
-button
-to
 remove
 a
 top
@@ -20867,6 +20985,30 @@ string
 -
 -
 Bookmark
+menu
+move
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_menu_move_button
+"
+>
+Senkez
+<
+/
+string
+>
+<
+!
+-
+-
+Bookmark
 overflow
 menu
 edit
@@ -21670,6 +21812,93 @@ string
 !
 -
 -
+Bookmark
+snackbar
+message
+for
+deleting
+a
+single
+item
+.
+Parameter
+is
+the
+title
+of
+the
+item
+being
+deleted
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_single_item
+"
+>
+%
+s
+yettwakkes
+<
+/
+string
+>
+<
+!
+-
+-
+Bookmark
+snackbar
+message
+for
+deleting
+multiple
+items
+.
+Parameter
+is
+the
+number
+of
+items
+being
+deleted
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_multiple_items
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Iferdisen
+yettwakksen
+:
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 for
 the
@@ -21757,52 +21986,6 @@ bookmark_add_new_folder_button_content_description
 Rnu
 akaram
 amaynut
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-the
-bookmark
-navigation
-bar
-close
-button
--
--
->
-<
-string
-name
-=
-"
-bookmark_close_button_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Mdel
-ticra
-n
-yisebtar
 <
 /
 string
@@ -22101,6 +22284,46 @@ t
 emmle
 ticki
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+add
+new
+folder
+button
+when
+selecting
+a
+folder
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_select_folder_new_folder_button_title
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Akaram
+amaynut
 <
 /
 string
@@ -23434,6 +23657,123 @@ studies_off
 "
 >
 Yensa
+<
+/
+string
+>
+<
+!
+-
+-
+Category
+header
+of
+a
+preference
+that
+allows
+a
+user
+to
+alter
+settings
+related
+to
+web
+permissions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_category_permissions
+"
+>
+Tisirag
+<
+/
+string
+>
+<
+!
+-
+-
+Category
+header
+of
+a
+preference
+that
+allows
+a
+user
+to
+alter
+settings
+related
+to
+web
+content
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_category_content
+"
+>
+Agbur
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+altering
+the
+default
+browsing
+mode
+.
+When
+enabled
+the
+desktop
+site
+will
+always
+be
+requested
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preference_feature_desktop_mode_default
+"
+>
+Ssuter
+yal
+tikkelt
+asmel
+n
+tnarit
 <
 /
 string
@@ -25175,226 +25515,6 @@ string
 -
 -
 Text
-for
-option
-one
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_0
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-War
-tamawt
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-two
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_1
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Texse
--
-as
-akk
-nniya
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-three
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_2
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Ur
-yumir
-ara
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-four
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_3
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Y
-Tumer
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-five
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_4
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Yumer
-a
-as
-<
-/
-string
->
-<
-!
--
--
-Text
 shown
 in
 the
@@ -26289,6 +26409,68 @@ in
 snackbar
 when
 user
+bookmarks
+a
+list
+of
+tabs
+.
+Parameter
+will
+be
+replaced
+by
+the
+name
+of
+the
+folder
+the
+bookmark
+was
+saved
+into
+.
+-
+-
+>
+<
+string
+name
+=
+"
+snackbar_message_bookmarks_saved_in
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Ticra
+n
+yisebtar
+ttwaskelsent
+deg
+%
+s
+!
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+snackbar
+when
+user
 adds
 a
 site
@@ -26746,57 +26928,6 @@ tab_collection_dialog_positive
 "
 >
 Kkes
-<
-/
-string
->
-<
-!
--
--
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Askar
-n
-ugdil
-a
-aran
-yermed
 <
 /
 string
@@ -27634,72 +27765,6 @@ delete_history_prompt_title
 Azilal
 ara
 tekkse
-<
-/
-string
->
-<
-!
--
--
-Body
-text
-of
-a
-delete
-browsing
-data
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
-delete_history_prompt_body
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Itekkes
-azray
-(
-ula
-d
-azray
-yemtawan
-seg
-yibenkan
--
-nni
-en
-)
-inagan
-n
-tuqqna
-akked
-isefka
--
-nni
-en
-n
-tunigin
-.
 <
 /
 string
@@ -29874,52 +29939,6 @@ string
 name
 =
 "
-preference_enhanced_tracking_protection_custom_fingerprinters
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Idsilen
-um
-inen
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
-enhanced
-tracking
-protection
-for
-the
-custom
-protection
-settings
--
--
->
-<
-string
-name
-=
-"
 preference_enhanced_tracking_protection_custom_known_fingerprinters
 "
 >
@@ -30422,125 +30441,6 @@ kksen
 tadrimt
 tum
 int
-.
-<
-/
-string
->
-<
-!
--
--
-Category
-of
-trackers
-(
-fingerprinters
-)
-that
-can
-be
-blocked
-by
-Enhanced
-Tracking
-Protection
--
--
->
-<
-string
-name
-=
-"
-etp_fingerprinters_title
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Idsilen
-um
-inen
-<
-/
-string
->
-<
-!
--
--
-Description
-of
-fingerprinters
-that
-can
-be
-blocked
-by
-Enhanced
-Tracking
-Protection
--
--
->
-<
-string
-name
-=
-"
-etp_fingerprinters_description
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Ad
-isew
-el
-alqa
-n
-yisefka
-yettwammalen
-s
-wudem
-asuf
-ef
-yibenk
--
-ik
-da
-en
-wid
-i
-izemren
-ad
-ttwasqedcen
-i
-u
-far
 .
 <
 /
@@ -38683,51 +38583,6 @@ string
 !
 -
 -
-Button
-caption
-to
-confirm
-the
-renaming
-of
-the
-top
-site
-.
--
--
->
-<
-string
-name
-=
-"
-top_sites_rename_dialog_ok
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-IH
-<
-/
-string
->
-<
-!
--
--
 Dialog
 button
 text
@@ -39701,20 +39556,6 @@ name
 =
 "
 action_bar_up_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Inig
@@ -43221,106 +43062,6 @@ string
 name
 =
 "
-review_quality_check_contextual_onboarding_caption_3
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-S
-ufran
-Ih
-re
-tqeble
-%
-1
-s
-seg
-%
-2
-s
-akked
-%
-3
-s
-seg
-%
-4
-s
-.
-<
-/
-string
->
-<
-!
--
--
-Caption
-text
-to
-be
-displayed
-in
-review
-quality
-check
-contextual
-onboarding
-card
-above
-the
-opt
--
-in
-button
-.
-First
-parameter
-is
-Firefox
-app
-name
-third
-parameter
-is
-the
-Fakespot
-product
-name
-.
-Second
-&
-fourth
-are
-for
-clickable
-texts
-defined
-in
-review_quality_check_contextual_onboarding_privacy_policy_3
-and
-review_quality_check_contextual_onboarding_terms_use
-.
--
--
->
-<
-string
-name
-=
-"
 review_quality_check_contextual_onboarding_caption_4
 "
 >
@@ -43740,53 +43481,6 @@ Ldi
 amsenqad
 n
 tamawt
-<
-/
-string
->
-<
-!
--
--
-Flag
-showing
-that
-the
-review
-quality
-check
-feature
-is
-work
-in
-progress
-.
--
--
->
-<
-string
-name
-=
-"
-review_quality_check_beta_flag
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Beta
 <
 /
 string
@@ -47803,50 +47497,6 @@ screen
 Title
 of
 the
-download
-languages
-preference
-screen
-toolbar
-.
--
--
->
-<
-string
-name
-=
-"
-download_languages_toolbar_title_preference
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Sader
-tutlayin
-<
-/
-string
->
-<
-!
--
--
-Title
-of
-the
 toolbar
 for
 the
@@ -49107,186 +48757,6 @@ delete_language_file_dialog_negative_button_text
 "
 >
 Sefsex
-<
-/
-string
->
-<
-!
--
--
-Title
-for
-the
-dialog
-used
-by
-the
-translations
-feature
-to
-confirm
-canceling
-a
-download
-in
-progress
-for
-a
-language
-file
-.
-The
-first
-parameter
-is
-the
-name
-of
-the
-language
-for
-example
-"
-Spanish
-"
-.
--
--
->
-<
-string
-name
-=
-"
-cancel_download_language_file_dialog_title
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Sefsex
-asader
-n
-%
-1
-s
-?
-<
-/
-string
->
-<
-!
--
--
-Button
-text
-on
-the
-dialog
-used
-by
-the
-translations
-feature
-confirms
-canceling
-a
-download
-in
-progress
-for
-a
-language
-file
-.
--
--
->
-<
-string
-name
-=
-"
-cancel_download_language_file_dialog_positive_button_text
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Ih
-<
-/
-string
->
-<
-!
--
--
-Button
-text
-on
-the
-dialog
-used
-by
-the
-translations
-feature
-to
-dismiss
-the
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
-cancel_download_language_file_negative_button_text
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Ala
 <
 /
 string
@@ -50981,69 +50451,6 @@ shown
 in
 prompt
 for
-homepage
-microsurvey
-.
-Note
-:
-The
-word
-"
-Firefox
-"
-should
-NOT
-be
-translated
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_prompt_homepage_title
-"
-tools
-:
-ignore
-=
-"
-BrandUsage
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Tumre
-s
-usebtar
--
-ik
-agejdan
-n
-Firefox
-?
-<
-/
-string
->
-<
-!
--
--
-Text
-shown
-in
-prompt
-for
 printing
 microsurvey
 .
@@ -51553,59 +50960,6 @@ n
 tmahilt
 n
 u
-edqis
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-(
-not
-visible
-for
-screen
-readers
-etc
-.
-)
-for
-opening
-microsurvey
-bottom
-sheet
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_open_handle_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Ldi
-a
 edqis
 <
 /
