--- a/mobile/android/fenix/app/src/main/res/values-nl/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-nl/strings.xml
@@ -3288,6 +3288,49 @@ string
 Browser
 menu
 banner
+header
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_header
+"
+>
+U
+hebt
+extensies
+ge
+nstalleerd
+maar
+niet
+ingeschakeld
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 body
 text
 for
@@ -3345,6 +3388,81 @@ van
 privacy
 en
 veiligheid
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+Schakel
+om
+extensies
+te
+gebruiken
+ze
+in
+in
+de
+instellingen
+of
+door
+hieronder
+%
+s
+te
+selecteren
 .
 <
 /
@@ -6793,13 +6911,6 @@ name
 =
 "
 search_engine_icon_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 %
