--- a/mobile/android/fenix/app/src/main/res/values-pt-rBR/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-pt-rBR/strings.xml
@@ -3387,6 +3387,50 @@ string
 Browser
 menu
 banner
+header
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_header
+"
+>
+Voc
+tem
+extens
+es
+instaladas
+mas
+n
+o
+ativadas
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 body
 text
 for
@@ -3448,6 +3492,77 @@ privacidade
 e
 seguran
 a
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+Para
+usar
+extens
+es
+ative
+nas
+configura
+es
+ou
+selecione
+%
+s
+abaixo
 .
 <
 /
@@ -6981,13 +7096,6 @@ name
 =
 "
 search_engine_icon_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Mecanismo
