--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-gn/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-gn/strings.xml
@@ -4609,6 +4609,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4627,6 +4641,72 @@ tekopyta
 t
 r
 tekoros
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+omomar
+Mozilla
+porureko
+ha
+ndaikat
+i
+emohenda
+%
+2
+s
+.
 <
 /
 string
@@ -4748,6 +4828,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4758,6 +4852,73 @@ porureko
 ha
 neremohendakua
 i
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+omomar
+Mozilla
+porureko
+ha
+ndaikat
+i
+emohenda
+%
+2
+s
 .
 <
 /
@@ -5865,6 +6026,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5882,6 +6057,218 @@ r
 t
 r
 tekopyta
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Ko
+jepysokue
+ojejok
+ma
+omomar
+hagu
+re
+Mozilla
+porureko
+ha
+up
+vare
+ojeipe
+ma
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Ko
+jepysokue
+ojejok
+ma
+omomar
+re
+Mozilla
+porureko
+ha
+up
+vare
+ojeipe
+ma
+.
+Ikatu
+emyandy
+jey
+h
+katu
+i
+apa
+uaikuaa
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Ko
+jepysokue
+ojejok
+ma
+omomar
+re
+Mozilla
+porureko
+ha
+up
+vare
+ojeipe
+ma
+.
+Ikatu
+emyandy
+jey
+h
+katu
+i
+apa
+uaikuaa
 .
 <
 /
