--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-hu/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-hu/strings.xml
@@ -4889,6 +4889,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 A
 (
@@ -4916,6 +4930,82 @@ l
 magas
 kock
 zat
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+A
+(
+z
+)
+%
+1
+s
+s
+rti
+a
+Mozilla
+ir
+nyelveit
+ez
+rt
+nem
+telep
+thet
+erre
+:
+%
+2
+s
 .
 <
 /
@@ -5047,6 +5137,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 A
 (
@@ -5066,6 +5170,83 @@ rt
 nem
 telep
 thet
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+A
+(
+z
+)
+%
+1
+s
+s
+rti
+a
+Mozilla
+ir
+nyelveit
+ez
+rt
+nem
+telep
+thet
+erre
+:
+%
+2
+s
 .
 <
 /
@@ -6252,6 +6433,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 A
 (
@@ -6301,6 +6496,77 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Ez
+a
+kieg
+sz
+t
+a
+Mozilla
+ir
+nyelveinek
+megs
+rt
+se
+miatt
+blokkolva
+lett
+s
+le
+lett
+tiltva
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -6315,6 +6581,20 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Ez
 a
@@ -6327,6 +6607,78 @@ a
 Mozilla
 ir
 nyelveit
+s
+le
+lett
+tiltva
+.
+Enged
+lyezheti
+de
+ez
+kock
+zatos
+lehet
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Ez
+a
+kieg
+sz
+t
+a
+Mozilla
+ir
+nyelveinek
+megs
+rt
+se
+miatt
+korl
+tozva
+lett
 s
 le
 lett
