--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-kab/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-kab/strings.xml
@@ -4697,6 +4697,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4715,6 +4729,77 @@ t
 ellist
 akked
 urkad
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+ur
+iquder
+ara
+tasertit
+n
+Mozilla
+ur
+yezmir
+ara
+ad
+yettusbedd
+ef
+%
+2
+s
 .
 <
 /
@@ -4844,6 +4929,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4859,6 +4958,78 @@ yezmir
 ara
 ad
 yettusbedd
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+ur
+iquder
+ara
+tasertit
+n
+Mozilla
+ur
+yezmir
+ara
+ad
+yettusbedd
+ef
+%
+2
+s
+.
 <
 /
 string
@@ -5966,6 +6137,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -6023,6 +6208,20 @@ name
 =
 "
 mozac_feature_addons_status_softblocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Asi
