--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-rm/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-rm/strings.xml
@@ -4227,13 +4227,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4288,6 +4304,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4307,6 +4339,41 @@ installar
 questa
 extensiun
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Impussibel
+d
+installar
+l
+extensiun
 <
 /
 string
@@ -4579,6 +4646,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Impussibel
 dad
@@ -4602,6 +4683,77 @@ stabilitad
 u
 da
 segirezza
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+violescha
+las
+directivas
+da
+Mozilla
+e
+na
+po
+betg
+vegnir
+install
+en
+%
+2
+s
 .
 <
 /
@@ -4691,6 +4843,152 @@ sustegn
 da
 questa
 plattafurma
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+%
+1
+s
+violescha
+las
+directivas
+da
+Mozilla
+e
+na
+po
+betg
+vegnir
+install
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+violescha
+las
+directivas
+da
+Mozilla
+e
+na
+po
+betg
+vegnir
+install
+en
+%
+2
+s
 .
 <
 /
@@ -5727,6 +6025,42 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Mussar
+ils
+detagls
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5769,6 +6103,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5783,6 +6131,285 @@ segirezza
 u
 da
 stabilitad
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Questa
+extensiun
+bloccada
+pervia
+da
+la
+violaziun
+da
+directivas
+da
+Mozilla
+ed
+vegnida
+deactivada
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Questa
+extensiun
+violescha
+las
+directivas
+da
+Mozilla
+ed
+vegnida
+deactivada
+.
+Ti
+pos
+l
+activar
+ma
+quai
+po
+esser
+ristgus
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Questa
+extensiun
+suttamessa
+a
+limitaziuns
+pervia
+da
+la
+violaziun
+da
+las
+directivas
+da
+Mozilla
+ed
+vegnida
+deactivada
+.
+Ti
+pos
+l
+activar
+ma
+quai
+po
+esser
+ristgus
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Questa
+extensiun
+violescha
+las
+directivas
+da
+Mozilla
+.
+L
+utilisaziun
+po
+esser
+ristgusa
 .
 <
 /
