--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-tr/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-tr/strings.xml
@@ -4647,6 +4647,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4668,6 +4682,77 @@ ma
 riski
 y
 ksek
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+Mozilla
+politikalar
+n
+ihlal
+etti
+i
+i
+in
+%
+2
+s
+uygulamas
+na
+y
+klenemiyor
 .
 <
 /
@@ -4791,6 +4876,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4803,6 +4902,78 @@ etti
 i
 i
 in
+y
+klenemiyor
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+Mozilla
+politikalar
+n
+ihlal
+etti
+i
+i
+in
+%
+2
+s
+uygulamas
+na
 y
 klenemiyor
 .
@@ -5934,6 +6105,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5946,6 +6131,75 @@ l
 k
 gerek
 esiyle
+devre
+d
+b
+rak
+ld
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Bu
+uzant
+Mozilla
+politikalar
+n
+ihlal
+etti
+i
+i
+in
+engellendi
+ve
 devre
 d
 b
@@ -5994,6 +6248,20 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Bu
 uzant
@@ -6007,6 +6275,80 @@ etti
 i
 i
 in
+devre
+d
+b
+rak
+ld
+.
+Uzant
+y
+etkinle
+tirebilirsiniz
+ama
+bu
+riskli
+olabilir
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Bu
+uzant
+Mozilla
+n
+n
+politikalar
+n
+ihlal
+etti
+i
+i
+in
+k
+s
+tland
+ve
 devre
 d
 b
