--- a/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-fy-rNL/strings.xml
+++ b/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-fy-rNL/strings.xml
@@ -116,6 +116,64 @@ string
 !
 -
 -
+Message
+announced
+to
+the
+user
+when
+tab
+tray
+is
+selected
+The
+%
+1
+s
+will
+be
+replaced
+by
+the
+number
+of
+opened
+tabs
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_tab_counter_open_tab_tray
+"
+>
+Iepen
+ljepbl
+den
+:
+%
+1
+s
+.
+Tik
+om
+tusken
+ljepbl
+den
+te
+wikseljen
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 button
