--- a/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-gn/strings.xml
+++ b/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-gn/strings.xml
@@ -112,6 +112,62 @@ string
 !
 -
 -
+Message
+announced
+to
+the
+user
+when
+tab
+tray
+is
+selected
+The
+%
+1
+s
+will
+be
+replaced
+by
+the
+number
+of
+opened
+tabs
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_tab_counter_open_tab_tray
+"
+>
+Tendayke
+ijuruj
+va
+:
+%
+1
+s
+.
+Eikutu
+emoambue
+hag
+ua
+tendayke
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 button
