--- a/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-nl/strings.xml
+++ b/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-nl/strings.xml
@@ -112,6 +112,62 @@ string
 !
 -
 -
+Message
+announced
+to
+the
+user
+when
+tab
+tray
+is
+selected
+The
+%
+1
+s
+will
+be
+replaced
+by
+the
+number
+of
+opened
+tabs
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_tab_counter_open_tab_tray
+"
+>
+Open
+tabbladen
+:
+%
+1
+s
+.
+Tik
+om
+tussen
+tabbladen
+te
+wisselen
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 button
