--- a/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-pt-rBR/strings.xml
+++ b/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-pt-rBR/strings.xml
@@ -108,6 +108,61 @@ string
 !
 -
 -
+Message
+announced
+to
+the
+user
+when
+tab
+tray
+is
+selected
+The
+%
+1
+s
+will
+be
+replaced
+by
+the
+number
+of
+opened
+tabs
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_tab_counter_open_tab_tray
+"
+>
+Abas
+abertas
+:
+%
+1
+s
+.
+Toque
+para
+mudar
+de
+aba
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 button
