--- a/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-tr/strings.xml
+++ b/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-tr/strings.xml
@@ -116,6 +116,63 @@ string
 !
 -
 -
+Message
+announced
+to
+the
+user
+when
+tab
+tray
+is
+selected
+The
+%
+1
+s
+will
+be
+replaced
+by
+the
+number
+of
+opened
+tabs
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_tab_counter_open_tab_tray
+"
+>
+%
+1
+s
+a
+k
+sekme
+.
+Sekme
+de
+i
+tirmek
+i
+in
+dokunun
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 button
