--- a/mobile/android/fenix/app/src/main/res/values-cs/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-cs/strings.xml
@@ -1936,76 +1936,6 @@ string
 name
 =
 "
-navbar_cfr_message
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Tato
-li
-ta
-se
-p
-i
-posouv
-n
-dol
-skryje
-a
-z
-sk
-te
-tak
-dal
-prostor
-na
-prohl
-en
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-message
-displayed
-in
-the
-contextual
-feature
-recommendation
-popup
-promoting
-the
-navigation
-bar
-.
--
--
->
-<
-string
-name
-=
-"
 navbar_cfr_message_2
 "
 >
@@ -3555,6 +3485,50 @@ string
 Browser
 menu
 banner
+header
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_header
+"
+>
+M
+te
+nainstalov
+ny
+roz
+en
+ale
+nejsou
+povolen
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 body
 text
 for
@@ -3786,64 +3760,6 @@ idat
 %
 1
 s
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-(
-not
-visible
-for
-screen
-readers
-etc
-.
-)
-:
-Label
-for
-plus
-icon
-used
-to
-add
-extensions
-.
--
--
->
-<
-string
-name
-=
-"
-browser_menu_extension_plus_icon_content_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-P
-idat
-roz
-en
 <
 /
 string
@@ -5481,6 +5397,184 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+main
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_main_menu_handlebar_content_description
+"
+>
+Zav
+t
+seznam
+hlavn
+nab
+dky
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+extensions
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_extensions_menu_handlebar_content_description
+"
+>
+Zav
+t
+seznam
+s
+nab
+dnou
+roz
+en
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+save
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_save_menu_handlebar_content_description
+"
+>
+Zav
+t
+seznam
+s
+nab
+dkou
+ulo
+en
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+tools
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_tools_menu_handlebar_content_description
+"
+>
+Zav
+t
+seznam
+s
+nab
+dkou
+n
+stroj
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 description
@@ -6580,8 +6674,60 @@ name
 "
 search_scan_button
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Naskenovat
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+in
+the
+search
+view
+that
+lets
+a
+user
+search
+by
+scanning
+a
+QR
+code
+-
+-
+>
+<
+string
+name
+=
+"
+search_scan_button_2
+"
+>
+Naskenovat
+QR
+k
+d
 <
 /
 string
@@ -7022,13 +7168,6 @@ name
 =
 "
 search_engine_icon_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Vyhled
@@ -7501,273 +7640,6 @@ string
 !
 -
 -
-Notification
-pre
--
-permission
-dialog
--
--
->
-<
-!
--
--
-Enable
-notification
-pre
-permission
-dialog
-title
-The
-first
-parameter
-is
-the
-name
-of
-the
-app
-defined
-in
-app_name
-(
-for
-example
-:
-Fenix
-)
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_title
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Ozn
-men
-v
-m
-pomohou
-s
-aplikac
-%
-s
-ud
-lat
-v
-ce
-<
-/
-string
->
-<
-!
--
--
-Enable
-notification
-pre
-permission
-dialog
-description
-with
-rationale
-The
-first
-parameter
-is
-the
-name
-of
-the
-app
-defined
-in
-app_name
-(
-for
-example
-:
-Fenix
-)
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Synchronizujte
-sv
-panely
-mezi
-za
-zen
-mi
-spravujte
-stahov
-n
-a
-z
-skejte
-tipy
-jak
-co
-nejl
-pe
-v
-aplikaci
-%
-s
-vyu
-vat
-ochranu
-soukrom
-a
-dal
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-request
-notification
-permission
-on
-the
-device
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_positive_button
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Pokra
-ovat
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-not
-request
-notification
-permission
-on
-the
-device
-and
-dismiss
-the
-dialog
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_negative_button
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Te
-ne
-<
-/
-string
->
-<
-!
--
--
 Juno
 first
 user
@@ -8164,161 +8036,6 @@ string
 !
 -
 -
-Description
-for
-set
-firefox
-as
-default
-browser
-screen
-used
-by
-Nimbus
-experiments
-.
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_default_browser_description_nimbus_2
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-N
-neziskov
-prohl
-e
-pom
-h
-zabr
-nit
-spole
-nostem
-v
-tajn
-m
-sledov
-n
-va
-eho
-prohl
-en
-webu
-.
-\
-n
-\
-nZjist
-te
-v
-ce
-v
-na
-ich
-z
-sad
-ch
-ochrany
-osobn
-ch
-daj
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-link
-to
-the
-privacy
-notice
-webpage
-for
-set
-as
-firefox
-default
-browser
-screen
-.
-This
-is
-part
-of
-the
-string
-with
-the
-key
-"
-juno_onboarding_default_browser_description
-"
-.
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_default_browser_description_link_text
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-z
-sad
-ch
-ochrany
-osobn
-ch
-daj
-<
-/
-string
->
-<
-!
--
--
 Text
 for
 the
@@ -8436,93 +8153,6 @@ mi
 bu
 te
 ifrovan
-<
-/
-string
->
-<
-!
--
--
-Description
-for
-sign
-in
-to
-sync
-screen
-.
-Nimbus
-experiments
-do
-not
-support
-string
-placeholders
-.
-Note
-:
-The
-word
-"
-Firefox
-"
-should
-NOT
-be
-translated
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_sign_in_description_2
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-BrandUsage
-UnusedResources
-"
->
-Kdy
-jste
-p
-ihl
-eni
-a
-synchronizujete
-jste
-ve
-v
-t
-m
-bezpe
-.
-Firefox
-ifruje
-va
-e
-hesla
-z
-lo
-ky
-a
-dal
-data
-.
 <
 /
 string
@@ -9163,6 +8793,371 @@ UnusedResources
 >
 Te
 ne
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+button
+for
+start
+browsing
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_start_browsing_button
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+>
+Za
+t
+prohl
+et
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+for
+checking
+more
+add
+-
+ons
+on
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_explore_more_extensions_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Pod
+vejte
+se
+na
+dal
+roz
+en
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+button
+for
+start
+browsing
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_start_browsing_button_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Za
+t
+prohl
+et
+<
+/
+string
+>
+<
+!
+-
+-
+Ublock
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Ublock
+Origin
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_ublock_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+uBlock
+Origin
+<
+/
+string
+>
+<
+!
+-
+-
+Ublock
+description
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_ublock_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+inn
+a
+efektivn
+blokov
+n
+reklam
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Privacy
+Badger
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Privacy
+Badger
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_privacy_badger_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Privacy
+Badger
+<
+/
+string
+>
+<
+!
+-
+-
+Privacy
+Badger
+description
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_privacy_badger_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Klenot
+proti
+sledov
+n
+.
+Zastavte
+neviditeln
+sledovac
+prvky
+a
+pehuj
+c
+reklamy
+.
 <
 /
 string
@@ -9986,11 +9981,51 @@ name
 "
 preferences_site_permissions
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Opr
 vn
 n
 server
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+advanced
+site
+settings
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_site_settings
+"
+>
+Nastaven
+serveru
 <
 /
 string
@@ -19796,51 +19831,6 @@ the
 menu
 button
 to
-rename
-a
-top
-site
--
--
->
-<
-string
-name
-=
-"
-rename_top_site
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-P
-ejmenovat
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-menu
-button
-to
 remove
 a
 top
@@ -21155,6 +21145,31 @@ string
 -
 -
 Bookmark
+menu
+move
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_menu_move_button
+"
+>
+P
+esunout
+<
+/
+string
+>
+<
+!
+-
+-
+Bookmark
 overflow
 menu
 edit
@@ -22091,53 +22106,6 @@ string
 Content
 description
 for
-the
-bookmark
-navigation
-bar
-close
-button
--
--
->
-<
-string
-name
-=
-"
-bookmark_close_button_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Zav
-t
-z
-lo
-ky
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
 bookmark
 search
 floating
@@ -22457,6 +22425,47 @@ ben
 str
 nky
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+add
+new
+folder
+button
+when
+selecting
+a
+folder
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_select_folder_new_folder_button_title
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Nov
+slo
+ka
 <
 /
 string
@@ -23826,6 +23835,82 @@ studies_off
 "
 >
 Vypnuto
+<
+/
+string
+>
+<
+!
+-
+-
+Category
+header
+of
+a
+preference
+that
+allows
+a
+user
+to
+alter
+settings
+related
+to
+web
+permissions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_category_permissions
+"
+>
+Opr
+vn
+n
+<
+/
+string
+>
+<
+!
+-
+-
+Category
+header
+of
+a
+preference
+that
+allows
+a
+user
+to
+alter
+settings
+related
+to
+web
+content
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_category_content
+"
+>
+Obsah
 <
 /
 string
@@ -25603,223 +25688,6 @@ string
 -
 -
 Text
-for
-option
-one
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_0
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Neutr
-ln
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-two
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_1
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Velmi
-nespokojen
-/
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-three
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_2
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Nespokojen
-/
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-four
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_3
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Spokojen
-/
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-option
-five
-shown
-in
-microsurvey
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_survey_5_point_option_4
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Velmi
-spokojen
-/
-<
-/
-string
->
-<
-!
--
--
-Text
 shown
 in
 the
@@ -27209,58 +27077,6 @@ string
 !
 -
 -
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Spu
-t
-n
-re
-im
-cel
-obrazovky
-<
-/
-string
->
-<
-!
--
--
 Message
 for
 copying
@@ -28086,67 +27902,6 @@ asov
 obdob
 maz
 n
-<
-/
-string
->
-<
-!
--
--
-Body
-text
-of
-a
-delete
-browsing
-data
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
-delete_history_prompt_body
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Odstran
-historii
-(
-v
-etn
-synchronizovan
-historie
-z
-ostatn
-ch
-za
-zen
-)
-cookies
-a
-souvisej
-c
-data
-.
 <
 /
 string
@@ -30334,55 +30089,6 @@ string
 name
 =
 "
-preference_enhanced_tracking_protection_custom_fingerprinters
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Vytv
-en
-otisku
-prohl
-e
-e
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
-enhanced
-tracking
-protection
-for
-the
-custom
-protection
-settings
--
--
->
-<
-string
-name
-=
-"
 preference_enhanced_tracking_protection_custom_known_fingerprinters
 "
 >
@@ -30866,128 +30572,6 @@ digit
 ln
 ch
 m
-n
-.
-<
-/
-string
->
-<
-!
--
--
-Category
-of
-trackers
-(
-fingerprinters
-)
-that
-can
-be
-blocked
-by
-Enhanced
-Tracking
-Protection
--
--
->
-<
-string
-name
-=
-"
-etp_fingerprinters_title
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Vytv
-en
-otisku
-prohl
-e
-e
-<
-/
-string
->
-<
-!
--
--
-Description
-of
-fingerprinters
-that
-can
-be
-blocked
-by
-Enhanced
-Tracking
-Protection
--
--
->
-<
-string
-name
-=
-"
-etp_fingerprinters_description
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Zastav
-shroma
-ov
-n
-dat
-o
-va
-em
-za
-zen
-kter
-mohou
-b
-t
-vyu
-ita
-k
-va
-identifikaci
-nebo
-va
-emu
-sledov
 n
 .
 <
@@ -39143,51 +38727,6 @@ string
 !
 -
 -
-Button
-caption
-to
-confirm
-the
-renaming
-of
-the
-top
-site
-.
--
--
->
-<
-string
-name
-=
-"
-top_sites_rename_dialog_ok
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-OK
-<
-/
-string
->
-<
-!
--
--
 Dialog
 button
 text
@@ -40181,20 +39720,6 @@ name
 =
 "
 action_bar_up_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 P
@@ -43650,115 +43175,6 @@ string
 name
 =
 "
-review_quality_check_contextual_onboarding_caption_3
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-V
-b
-rem
-mo
-nosti
-Ano
-vyzkou
-et
-souhlas
-te
-s
-%
-2
-s
-prohl
-e
-e
-%
-1
-s
-a
-%
-4
-s
-spole
-nosti
-%
-3
-s
-.
-<
-/
-string
->
-<
-!
--
--
-Caption
-text
-to
-be
-displayed
-in
-review
-quality
-check
-contextual
-onboarding
-card
-above
-the
-opt
--
-in
-button
-.
-First
-parameter
-is
-Firefox
-app
-name
-third
-parameter
-is
-the
-Fakespot
-product
-name
-.
-Second
-&
-fourth
-are
-for
-clickable
-texts
-defined
-in
-review_quality_check_contextual_onboarding_privacy_policy_3
-and
-review_quality_check_contextual_onboarding_terms_use
-.
--
--
->
-<
-string
-name
-=
-"
 review_quality_check_contextual_onboarding_caption_4
 "
 >
@@ -44185,53 +43601,6 @@ Otev
 t
 kontrolu
 recenz
-<
-/
-string
->
-<
-!
--
--
-Flag
-showing
-that
-the
-review
-quality
-check
-feature
-is
-work
-in
-progress
-.
--
--
->
-<
-string
-name
-=
-"
-review_quality_check_beta_flag
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Beta
 <
 /
 string
@@ -48298,51 +47667,6 @@ screen
 Title
 of
 the
-download
-languages
-preference
-screen
-toolbar
-.
--
--
->
-<
-string
-name
-=
-"
-download_languages_toolbar_title_preference
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Sta
-en
-jazyk
-<
-/
-string
->
-<
-!
--
--
-Title
-of
-the
 toolbar
 for
 the
@@ -49600,189 +48924,6 @@ delete_language_file_dialog_negative_button_text
 >
 Zru
 it
-<
-/
-string
->
-<
-!
--
--
-Title
-for
-the
-dialog
-used
-by
-the
-translations
-feature
-to
-confirm
-canceling
-a
-download
-in
-progress
-for
-a
-language
-file
-.
-The
-first
-parameter
-is
-the
-name
-of
-the
-language
-for
-example
-"
-Spanish
-"
-.
--
--
->
-<
-string
-name
-=
-"
-cancel_download_language_file_dialog_title
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-P
-eru
-it
-stahov
-n
-souboru
-%
-1
-s
-?
-<
-/
-string
->
-<
-!
--
--
-Button
-text
-on
-the
-dialog
-used
-by
-the
-translations
-feature
-confirms
-canceling
-a
-download
-in
-progress
-for
-a
-language
-file
-.
--
--
->
-<
-string
-name
-=
-"
-cancel_download_language_file_dialog_positive_button_text
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Ano
-<
-/
-string
->
-<
-!
--
--
-Button
-text
-on
-the
-dialog
-used
-by
-the
-translations
-feature
-to
-dismiss
-the
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
-cancel_download_language_file_negative_button_text
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Ne
 <
 /
 string
@@ -51478,70 +50619,6 @@ shown
 in
 prompt
 for
-homepage
-microsurvey
-.
-Note
-:
-The
-word
-"
-Firefox
-"
-should
-NOT
-be
-translated
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_prompt_homepage_title
-"
-tools
-:
-ignore
-=
-"
-BrandUsage
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Jak
-jste
-spokojeni
-se
-svou
-domovskou
-str
-nkou
-Firefoxu
-?
-<
-/
-string
->
-<
-!
--
--
-Text
-shown
-in
-prompt
-for
 printing
 microsurvey
 .
@@ -52049,60 +51126,6 @@ Ikona
 funkce
 pr
 zkumu
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-(
-not
-visible
-for
-screen
-readers
-etc
-.
-)
-for
-opening
-microsurvey
-bottom
-sheet
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_open_handle_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
-"
->
-Otev
-e
-pr
-zkum
 <
 /
 string
