--- a/mobile/android/fenix/app/src/main/res/values-es-rAR/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-es-rAR/strings.xml
@@ -3417,6 +3417,48 @@ string
 Browser
 menu
 banner
+header
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_header
+"
+>
+Ten
+s
+extensiones
+instaladas
+pero
+no
+habilitadas
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 body
 text
 for
@@ -3477,6 +3519,76 @@ la
 privacidad
 y
 seguridad
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+Para
+usar
+extensiones
+habilitalas
+en
+configuraci
+n
+o
+seleccionando
+%
+s
+debajo
 .
 <
 /
@@ -7038,13 +7150,6 @@ name
 =
 "
 search_engine_icon_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Buscador
